--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <title>Biorhythm Calculator</title>
+    <title>Tyler Wigginton</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
